Modularized the code

--- a/examples/forms.html
+++ b/examples/forms.html
@@ -13,13 +13,13 @@
 
     <form>
 
-        <h3 class="text-purple text-large">A Simple Form</h3>
+        <h3 class="text-blue text-large">A Simple Form</h3>
 
         <input type="text" name="" id="">
         <input type="text" name="" id="">
         <input type="text" name="" id="">
         <textarea name="" id="" cols="30" rows="10"></textarea>
-        <button type="submit" class="btn-purple">Submit Form</button>
+        <button type="submit" class="btn-blue">Submit Form</button>
         
     </form>
 
