Modified test library

--- a/test/test.html
+++ b/test/test.html
@@ -7,13 +7,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/sass/halcyon.css">
+    <link rel="stylesheet" href="../dist/halcyon.min.css">
     <title>The CSS Framework for Lazybones | Test</title>
 </head>
 
-<body>
+<body class="center-x">
 
-    <form>
+    <header class="w-100 h-10 bg-blue center-y">
+        <div class="title">
+            <h1 class="text-white text-medium p-inline" >Halcyon.css </h1>
+        </div>
+    </header>
+
+    <form class="w-80">
 
         <h3 class="text-purple text-large">A Simple Form</h3>
 
