Tested animation library

--- a/test/test.html
+++ b/test/test.html
@@ -21,7 +21,7 @@
 
     <main class="flex-column center-xy wv-100 hv-100">
 
-        <div class="grid-2 wp-80 hp-50 bg-green p-inline n-edgy p-40">
+        <div class="grid-2 wp-80 hp-50 bg-green p-inline n-edgy p-40 animate-right">
             
             <div class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, aperiam?</div>
             <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, adipisci.</div>
