Re-structured files

--- a/test/test.html
+++ b/test/test.html
@@ -21,7 +21,7 @@
 
     <main class="flex-column center-xy wv-100 hv-100">
 
-        <div class="grid-2 wp-80 hp-60 bg-white p-inline n-edgy p-40 animate">
+        <div class="grid-2 wp-80 hp-60 bg-white p-inline n-edgy p-40 ch-animate">
             
             <div class="animate-left text-green">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, doloremque. Consectetur cumque eum eligendi adipisci alias facilis. Delectus veritatis voluptatum tempore repellendus nesciunt, omnis, excepturi perferendis nobis alias repellat ipsa iusto ad cumque quaerat facere provident inventore voluptatem similique assumenda accusamus eveniet itaque quia! Deleniti culpa unde eos consequuntur aut.
